@@ -394,6 +394,8 @@ namespace libtorrent
 			void dht_get_peers(sha1_hash const& info_hash);
 			void dht_announce(sha1_hash const& info_hash, int port = 0, int flags = 0);
 
+			void dht_live_nodes(sha1_hash const& nid);
+
 			void dht_direct_request(udp::endpoint ep, entry& e
 				, void* userdata = nullptr);
 
