@@ -125,6 +125,8 @@ namespace libtorrent { namespace dht
 		void incoming_error(error_code const& ec, udp::endpoint const& ep);
 		bool incoming_packet(udp::endpoint const& ep, span<char const> buf);
 
+		std::vector<std::pair<node_id, udp::endpoint>> live_nodes(node_id const& nid);
+
 	private:
 
 		std::shared_ptr<dht_tracker> self()
