@@ -2129,4 +2129,85 @@ namespace libtorrent
 		return buf;
 	}
 
+	dht_live_nodes_alert::dht_live_nodes_alert(aux::stack_allocator& alloc
+		, sha1_hash const& nid
+		, std::vector<std::pair<sha1_hash, udp::endpoint>> const& nodes)
+		: node_id(nid)
+		, m_alloc(alloc)
+	{
+		for (auto const& n : nodes)
+		{
+			if (n.second.protocol() == udp::v4())
+				m_v4_num_nodes++;
+#if TORRENT_USE_IPV6
+			else
+				m_v6_num_nodes++;
+#endif
+		}
+
+		m_v4_nodes_idx = alloc.allocate(m_v4_num_nodes * (20 + 6));
+		m_v6_nodes_idx = alloc.allocate(m_v6_num_nodes * (20 + 18));
+
+		char* v4_ptr = alloc.ptr(m_v4_nodes_idx);
+#if TORRENT_USE_IPV6
+		char* v6_ptr = alloc.ptr(m_v6_nodes_idx);
+#endif
+		for (auto const& n : nodes)
+		{
+			udp::endpoint const& endp = n.second;
+			if (endp.protocol() == udp::v4())
+			{
+				detail::write_string(n.first.to_string(), v4_ptr);
+				detail::write_endpoint(endp, v4_ptr);
+			}
+#if TORRENT_USE_IPV6
+			else
+			{
+				detail::write_string(n.first.to_string(), v6_ptr);
+				detail::write_endpoint(endp, v6_ptr);
+			}
+#endif
+		}
+	}
+
+	std::string dht_live_nodes_alert::message() const
+	{
+		char msg[200];
+		std::snprintf(msg, sizeof(msg), "dht live nodes for id: %s, nodes %d"
+			, aux::to_hex(node_id).c_str(), num_nodes());
+		return msg;
+	}
+
+	int dht_live_nodes_alert::num_nodes() const
+	{
+		return m_v4_num_nodes + m_v6_num_nodes;
+	}
+
+	std::vector<std::pair<sha1_hash, udp::endpoint>> dht_live_nodes_alert::nodes() const
+	{
+		aux::vector<std::pair<sha1_hash, udp::endpoint>> nodes;
+		nodes.reserve(num_nodes());
+
+		char const* v4_ptr = m_alloc.get().ptr(m_v4_nodes_idx);
+		for (int i = 0; i < m_v4_num_nodes; i++)
+		{
+			sha1_hash ih;
+			std::memcpy(ih.data(), v4_ptr, 20);
+			v4_ptr += 20;
+			nodes.emplace_back(ih, detail::read_v4_endpoint<udp::endpoint>(v4_ptr));
+		}
+#if TORRENT_USE_IPV6
+		char const* v6_ptr = m_alloc.get().ptr(m_v6_nodes_idx);
+		for (int i = 0; i < m_v6_num_nodes; i++)
+		{
+			sha1_hash ih;
+			std::memcpy(ih.data(), v6_ptr, 20);
+			v6_ptr += 20;
+			nodes.emplace_back(ih, detail::read_v6_endpoint<udp::endpoint>(v6_ptr));
+		}
+#endif
+
+		return nodes;
+	}
+
 } // namespace libtorrent
